2008-05-24  James Sharpe <jsharpe@svn.gnome.org>

	* jhbuild/versioncontrol/git.py: Fixed git-svn show-ignore so >>
	is interpreted correctly by the shell. Only updates exclude file
	if the svn revision has changed.
	
2008-05-24  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: libgweather
	silently (?) branched for gnome-2-22.

2008-05-22  Frederic Peters  <fpeters@0d.be>

	* jhbuild/main.py: fixed unicode exception message printed on stderr.

2008-05-21  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: Devhelp branched
	for gnome-2-22.

2008-05-20  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	reviewed by: Frederic Peters

	* modulesets/bootstrap.modules:
	* patches/waf-install.patch: Add patch to fix WAF 1.4.2
	installation problem.  Closes #533978.

2008-05-20  Claudio Saavedra  <csaavedra@gnome.org>

	* modulesets/bootstrap.modules: Fix the location of waf.

2008-05-19  Claudio Saavedra  <csaavedra@gnome.org>

	* modulesets/bootstrap.modules: Upgrade waf to 1.4.2 to avoid some
	installation issues in gnome-python and the subsequent configuration
	problems in everything that relies on it.

2008-05-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/errors.py: set Exception.message for backward compatibility
	with Python < 2.5.  (closes: #533722)

2008-05-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: also use locale preferred encoding
	when asking for input.

2008-05-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/commands/checkbranches.py,
	jhbuild/commands/info.py, jhbuild/commands/rdepends.py,
	jhbuild/commands/sanitycheck.py, jhbuild/frontends/terminal.py,
	jhbuild/main.py: made uprint() use locale.getpreferredencoding()
	instead of getting sys.stdout encoding, as redirecting output would
	fall to ascii encoding.  Also replaced print by uprint() in many
	places.

2008-05-18  Murray Cumming  <murrayc@murrayc.com>
