@@ -1,3 +1,8 @@
+2008-05-24  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/main.py: work around locale.getpreferredencoding() returning
+	an empty string in Mac OS X.  (closes: #534650)
+
 2008-05-24  James Sharpe <jsharpe@svn.gnome.org>
 
 	* jhbuild/versioncontrol/git.py: Fixed git-svn show-ignore so >>
